--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.2",
+    "@grpc/proto-loader": "^0.6.2",
     "core-js": "^3.6.5",
+    "dns": "^0.2.2",
+    "http2": "^3.3.7",
     "vue": "^3.0.0"
   },
   "devDependencies": {
