--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
     "http2": "^3.3.7",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vuedraggable": "^4.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
