--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@grpc/proto-loader": "^0.6.2",
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
+    "google-proto-files": "^2.5.0",
     "http2": "^3.3.7",
+    "proto3-json-serializer": "^0.1.8",
+    "protobufjs": "^6.11.2",
     "vue": "^3.0.0",
     "vue3-tabs-chrome": "^0.2.1",
     "vuedraggable": "^4.0.1"
